--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,6 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
+    <link href="css/hover.css" rel="stylesheet">
     <link href="css/stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
@@ -76,10 +77,13 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About Me</h2>
+                    <hr class="small">
                     <p class="lead">Ronald is a senior Computer Science student at UC Berkeley. His main interest is in Mobile Application and Full-stack Web Development. He is currently helping out Haystack research team at ICSI Berkeley. Last summer he enjoyed working for Kapanlagi.com filling the position of software engineer intern. He likes to cruise the town with his penny board in the summer and snowboard along the mountain ranges in the winter. In his free time, he enjoys hacking his own projects and browsing Amazon for unique geeky gadgets. Go Bears!</p>
 <!--                    <p>Favorite Gif:<br>-->
                     <img src="https://media0.giphy.com/media/mTRpdks4k5sgo/200.gif"></p>
+                    <br>
                     <h2>Education</h2>
+                    <hr class="small">
                     <p class="lead"><b>B.A. Computer Science</b><br>
                         University of California Berkeley<br>
                         Expected May 2016
@@ -177,7 +181,15 @@
                     <h2>Projects</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 hvr-grow">
+                            <div class="portfolio-item">
+                                <a href="https://youtu.be/n2mCReP2edg">
+                                    <img class="img-portfolio img-responsive" src="img/flare.png">
+                                        Flare (Android Wear)
+                                        </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6 hvr-grow">
                             <div class="portfolio-item">
                                 <a href="https://bytlyn.com/">
                                     <img class="img-portfolio img-responsive" src="img/bytlyn.png">
@@ -185,7 +197,7 @@
                                         </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 hvr-grow">
                             <div class="portfolio-item">
                                 <a href="https://prottapp.com/p/5832ac">
                                     <img class="img-portfolio img-responsive" src="img/kaki2.png">
@@ -193,7 +205,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 hvr-grow">
                             <div class="portfolio-item">
                                 <a href="../heroes/index.html">
                                     <img class="img-portfolio img-responsive" src="../heroes/img/HLHpage.png">
@@ -201,7 +213,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 hvr-grow">
                             <div class="portfolio-item">
                                 <a href="http://dpdri.kapanlagi.com">
                                     <img class="img-portfolio img-responsive" src="img/dpdridesktop.png">
@@ -209,7 +221,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 hvr-grow">
                             <div class="portfolio-item">
                                 <a href="http://m.kapanlagi.com/dpdri">
                                     <img class="img-portfolio img-responsive" src="img/dpdrimobile3.png">
@@ -217,7 +229,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 hvr-grow">
                             <div class="portfolio-item">
                                 <a href="../kapanlagi/1sledmobile/index.html">
                                     <img class="img-portfolio img-responsive" src="../kapanlagi/kapanlagi.jpg">
@@ -225,7 +237,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 hvr-grow">
                             <div class="portfolio-item">
                                 <a href="http://cal-free-food.herokuapp.com">
                                     <img class="img-portfolio img-responsive" src="img/freefood.jpg">
@@ -233,7 +245,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 hvr-grow">
                             <div class="portfolio-item">
                                 <a href="http://github.com/onelz/crabgame">
                                     <img class="img-portfolio img-responsive" src="img/crabgame.png">
